--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -16,7 +16,7 @@
   text-align: center;
   padding: 66px 0 84px;
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 992px) {
   .fz-blog .blog-carousel {
     padding: 66px 0 30px;
   }
@@ -26,12 +26,6 @@
   font-size: 40px;
   font-weight: 500;
   line-height: 58px;
-}
-@media screen and (max-width: 991px) {
-  .fz-blog .blog-carousel h3 {
-    line-height: 40px;
-    font-size: 30px;
-  }
 }
 .fz-blog .blog-carousel p {
   color: #ffffff;
@@ -61,12 +55,6 @@
   border: 1px solid transparent;
   border-radius: 21px;
   background: linear-gradient(150.11deg, #002C21 3.16%, #86E1CB 94.92%) border-box;
-}
-@media screen and (max-width: 1400px) {
-  .fz-blog .item {
-    width: auto;
-    height: auto;
-  }
 }
 .fz-blog .item:hover .card-body {
   bottom: 0px;
@@ -100,7 +88,6 @@
   .fz-blog .item .card-body {
     width: 100%;
     padding: 0px 25px 30px 24px;
-    bottom: -67px;
   }
 }
 .fz-blog .item .card-body h5 {
@@ -147,8 +134,8 @@
 }
 .fz-blog .owl-carousel .owl-nav {
   display: flex;
-  justify-content: center;
-  gap: 170px;
+  justify-content: end;
+  gap: 190px;
   position: relative;
   margin-top: 50px;
 }
@@ -159,7 +146,6 @@
   color: #ffffff;
   cursor: pointer;
   transition: all 0.3s ease;
-  justify-content: center;
 }
 .fz-blog .owl-carousel .owl-nav .custom-prev:hover,
 .fz-blog .owl-carousel .owl-nav .custom-next:hover {
@@ -169,23 +155,38 @@
   content: "";
   width: 80px;
   height: 2.27px;
-  justify-content: center;
   position: absolute;
 }
 .fz-blog .owl-carousel .owl-nav::after {
   background: #ffffff;
   top: 50%;
   transform: translate(-50%, -50%);
-  left: 53%;
+  right: 8px;
+}
+@media screen and (max-width: 991px) {
+  .fz-blog .owl-carousel .owl-nav::after {
+    justify-content: center;
+  }
 }
 .fz-blog .owl-carousel .owl-nav::before {
   background: #3EAB90;
   top: 50%;
+  left: 87%;
   transform: translate(-50%, -50%);
+}
+@media screen and (max-width: 991px) {
+  .fz-blog .owl-carousel .owl-nav::before {
+    left: 60%;
+  }
 }
 .fz-blog .owl-carousel .owl-nav .custom-prev {
   color: #3EAB90;
 }
 .fz-blog .owl-carousel .owl-nav .custom-next {
   color: #ffffff;
+}
+@media screen and (max-width: 991px) {
+  .fz-blog .owl-carousel .owl-nav {
+    justify-content: center;
+  }
 }
