--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -11,7 +11,7 @@
   z-index: 0;
 }
 .fz_product_sec .fz_container {
-  background-color: #1A2C2A;
+  background-color: #1a2c2a;
   display: flex;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
@@ -33,27 +33,27 @@
 .fz_product_sec .fz_container .item-1 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10, 57, 58) 100%);
 }
 .fz_product_sec .fz_container .item-2 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10, 57, 58) 100%);
 }
 .fz_product_sec .fz_container .item-3 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10, 57, 58) 100%);
 }
 .fz_product_sec .fz_container .item-4 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10, 57, 58) 100%);
 }
 .fz_product_sec .fz_container .item-5 {
   animation: animateBg 11s linear infinite;
   background-size: 100% 300%;
-  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(18, 116, 117) 100%);
+  background: linear-gradient(rgb(0, 0, 0) 0%, rgb(10, 57, 58) 100%);
 }
 .fz_product_sec .fz_container .dot-nav-position-right {
   position: absolute;
@@ -133,11 +133,21 @@
     width: 100%;
   }
 }
+.fz_product_sec .fz_container .fz_sub_container .fz_content .fz_num {
+  display: inline-flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+}
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_num h3 {
-  line-height: 100px;
+  line-height: 75px;
   font-size: 128px;
   font-weight: 600;
   color: #ffffff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
 }
 @media screen and (max-width: 1200px) {
   .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_num h3 {
@@ -148,15 +158,22 @@
   font-size: 36px;
   font-weight: 700;
   line-height: 49px;
-  color: #F7C35F;
+  color: #34b195;
   padding-bottom: 2px;
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_subtitle {
-  font-size: 26px;
+  font-size: 12px;
   font-weight: 200;
   line-height: 26px;
-  color: #3EAB90;
-  padding-bottom: 10px;
+  color: #f8d796;
+  border: 1px solid rgba(247, 195, 95, 0.231372549);
+  border-radius: 20px;
+  background: rgba(25, 135, 84, 0.031372549);
+  display: inline-flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 5px 20px;
+  margin-bottom: 0px;
 }
 @media screen and (max-width: 1200px) {
   .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_subtitle {
@@ -165,20 +182,22 @@
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_bank {
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 400;
   color: #ffffff;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
   line-height: 30px;
+  letter-spacing: 0.25px;
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_desc {
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 14px;
+  font-weight: 300;
   color: #ffffff;
   padding-bottom: 26px;
   line-height: 26px;
+  letter-spacing: 0.25px;
 }
 .fz_product_sec .fz_container .fz_sub_container .fz_content .fz_btn button {
-  background: #3EAB90;
+  background: #3eab90;
   color: #ffffff;
   border-radius: 32px;
   font-size: 16px;
