--- a/assets/css/sass/product_intro.scss
+++ b/assets/css/sass/product_intro.scss
@@ -132,14 +132,14 @@
 
         h3 {
             font-weight: 200;
-            font-size: 65px;
+            font-size: 45px;
             color: #ddd;
             text-transform: capitalize;
             display: flex;
             justify-content: center;
 
             p {
-                width: 600px;
+                width: 30%;
                 text-shadow: 0 0 15px rgba(0, 255, 227, 0.14),
                     0 0 20px rgba(0, 255, 227, 0.11),
                     0 0 40px rgba(0, 255, 203, 0.52),
