--- a/assets/css/developer.css
+++ b/assets/css/developer.css
@@ -34,7 +34,7 @@
   }
 }
 .developer_section h5 {
-  color: #3EAB90;
+  color: #3eab90;
   font-size: 30px;
   padding-bottom: 40px;
   font-weight: 400;
@@ -45,8 +45,10 @@
   }
 }
 .developer_section .dev_left {
-  border-radius: 20px;
-  padding: 15px;
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 @media screen and (max-width: 767px) {
   .developer_section .dev_left {
@@ -70,6 +72,9 @@
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 8s linear infinite;
+  background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
+  border-radius: 20px;
+  box-shadow: inset 1.2px 0 rgba(255, 255, 255, 0.0392156863), inset -1.2px 0 rgba(255, 255, 255, 0.0392156863), inset 0 1.2px rgba(255, 255, 255, 0.1019607843), inset 0 0.6px rgba(255, 255, 255, 0.1019607843);
 }
 .developer_section .dev_left .dev_card:hover {
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
@@ -87,17 +92,17 @@
 .developer_section .dev_left .dev_card .dev_card_logo {
   display: inline-flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
 }
 .developer_section .dev_left .dev_card span {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   object-fit: contain;
-  background-color: #3EAB90;
-  padding: 10px;
+  padding: 5px;
   border-radius: 50%;
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 .developer_section .dev_left .dev_card span img {
   width: 100%;
@@ -105,14 +110,14 @@
 }
 .developer_section .dev_left .dev_card h4 {
   font-size: 20px;
-  font-weight: 500;
-  color: #3EAB90;
-  padding-bottom: 10px;
+  font-weight: 300;
+  color: #3eab90;
   color: #d7ba7d;
 }
 .developer_section .dev_left .dev_card p {
   color: #ffffff;
-  font-weight: 400;
+  font-size: 14px;
+  font-weight: 300;
   margin-bottom: 0px;
   transition: all 0.6s ease;
 }
@@ -143,11 +148,7 @@
   position: relative;
   overflow: hidden;
   --border-angle: 0turn;
-  --main-bg: conic-gradient(
-      from var(--border-angle),
-      #1A2C2A 0%,
-      #1A2C2A 100%
-      );
+  --main-bg: conic-gradient(from var(--border-angle), #0c0d0d 0%, #0d0e0e 100%);
   border: solid 1px transparent;
   border-radius: 1em;
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #f7c35f33, #3EAB90 99%, transparent);
@@ -165,9 +166,11 @@
 }
 .developer_section #editor .CodeMirror-scroll {
   background-color: #1A2D2C !important;
+  background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
 }
 .developer_section #editor .CodeMirror-scroll .CodeMirror-gutter {
   background-color: #1A2D2C !important;
+  background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
 }
 .developer_section #editor .CodeMirror-scroll .cm-keyword {
   color: #569CD6 !important;
