--- a/assets/css/faq.css
+++ b/assets/css/faq.css
@@ -27,7 +27,7 @@
   border-radius: 16px !important;
   background: #000000 !important;
   margin-bottom: 3px !important;
-  border-top: #3EAB90 !important;
+  border-top: #3eab90 !important;
 }
 .faq_section .accordion-item:first-of-type {
   border-radius: 16px !important;
@@ -42,17 +42,17 @@
   background-color: #ffffff;
 }
 .faq_section .accordion-item:not(:first-of-type) {
-  border-top: 1px solid #3EAB90 !important;
+  border-top: 1px solid #3eab90 !important;
 }
 .faq_section .accordion-item .accordion-header .accordion-button {
   position: relative;
   top: 2px;
-  padding: 10px 20px;
+  padding: 5px 20px;
   background: #000000 !important;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 48px;
-  letter-spacing: 1px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 35px;
+  letter-spacing: 0.25px;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
@@ -69,7 +69,7 @@
 .faq_section .accordion-item {
   margin-bottom: 20px;
   border-radius: 16px;
-  border: 1px solid #3EAB90;
+  border: 1px solid #3eab90;
   background-color: #000000 !important;
 }
 .faq_section .accordion-body {
@@ -83,7 +83,7 @@
   box-shadow: none;
 }
 .faq_section .accordion-item:not(:first-of-type) {
-  border-top: #3EAB90;
+  border-top: #3eab90;
 }
 .faq_section .accordion-item .accordion-header .accordion-button:focus {
   box-shadow: none;
@@ -100,7 +100,7 @@
 }
 .faq_section h3 {
   font-size: 40px;
-  color: #3EAB90;
+  color: #3eab90;
   font-weight: 500;
 }
 @media screen and (max-width: 768px) {
