--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1750,8 +1750,10 @@ header .fz_sigin ul li:last-child a {
   }
 }
 .developer_section .dev_left {
-  border-radius: 20px;
-  padding: 15px;
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 @media screen and (max-width: 767px) {
   .developer_section .dev_left {
@@ -1775,6 +1777,9 @@ header .fz_sigin ul li:last-child a {
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
   background-position: center center;
   animation: bg-spin 8s linear infinite;
+  background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
+  border-radius: 20px;
+  box-shadow: inset 1.2px 0 rgba(255, 255, 255, 0.0392156863), inset -1.2px 0 rgba(255, 255, 255, 0.0392156863), inset 0 1.2px rgba(255, 255, 255, 0.1019607843), inset 0 0.6px rgba(255, 255, 255, 0.1019607843);
 }
 .developer_section .dev_left .dev_card:hover {
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #F7C35F, #3EAB90 99%, transparent);
@@ -1792,17 +1797,17 @@ header .fz_sigin ul li:last-child a {
 .developer_section .dev_left .dev_card .dev_card_logo {
   display: inline-flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
 }
 .developer_section .dev_left .dev_card span {
-  width: 60px;
-  height: 60px;
+  width: 40px;
+  height: 40px;
   object-fit: contain;
-  background-color: #3eab90;
-  padding: 10px;
+  padding: 5px;
   border-radius: 50%;
   margin-bottom: 10px;
+  margin-right: 10px;
 }
 .developer_section .dev_left .dev_card span img {
   width: 100%;
@@ -1810,14 +1815,14 @@ header .fz_sigin ul li:last-child a {
 }
 .developer_section .dev_left .dev_card h4 {
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 300;
   color: #3eab90;
-  padding-bottom: 10px;
   color: #d7ba7d;
 }
 .developer_section .dev_left .dev_card p {
   color: #ffffff;
-  font-weight: 400;
+  font-size: 14px;
+  font-weight: 300;
   margin-bottom: 0px;
   transition: all 0.6s ease;
 }
@@ -1848,11 +1853,7 @@ header .fz_sigin ul li:last-child a {
   position: relative;
   overflow: hidden;
   --border-angle: 0turn;
-  --main-bg: conic-gradient(
-      from var(--border-angle),
-      #1A2C2A 0%,
-      #1A2C2A 100%
-      );
+  --main-bg: conic-gradient(from var(--border-angle), #0c0d0d 0%, #0d0e0e 100%);
   border: solid 1px transparent;
   border-radius: 1em;
   --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #f7c35f33, #3EAB90 99%, transparent);
@@ -1870,9 +1871,11 @@ header .fz_sigin ul li:last-child a {
 }
 .developer_section #editor .CodeMirror-scroll {
   background-color: #1A2D2C !important;
+  background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
 }
 .developer_section #editor .CodeMirror-scroll .CodeMirror-gutter {
   background-color: #1A2D2C !important;
+  background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
 }
 .developer_section #editor .CodeMirror-scroll .cm-keyword {
   color: #569CD6 !important;
@@ -2364,7 +2367,7 @@ header .fz_sigin ul li:last-child a {
   position: absolute;
   bottom: -46px;
   transition: all 0.6s ease-out;
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.69), #000000);
+  background: linear-gradient(rgba(0, 0, 0, 0.04), rgb(0, 0, 0), #000000);
 }
 @media screen and (max-width: 991px) {
   .fz-blog .item .card-body {
@@ -2374,17 +2377,17 @@ header .fz_sigin ul li:last-child a {
   }
 }
 .fz-blog .item .card-body h5 {
-  font-size: 22px;
-  line-height: 30px;
+  font-size: 18px;
+  line-height: 22px;
   font-weight: 500;
   padding-bottom: 12px;
   color: #f7c35f;
   margin-bottom: 0px;
 }
 .fz-blog .item .card-body .card-text {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 300;
 }
 .fz-blog .item .card-body .card-top-title {
   display: flex;
@@ -2599,12 +2602,12 @@ header .fz_sigin ul li:last-child a {
 .faq_section .accordion-item .accordion-header .accordion-button {
   position: relative;
   top: 2px;
-  padding: 10px 20px;
+  padding: 5px 20px;
   background: #000000 !important;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 48px;
-  letter-spacing: 1px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 35px;
+  letter-spacing: 0.25px;
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
