--- a/assets/css/sass/blog.scss
+++ b/assets/css/sass/blog.scss
@@ -89,7 +89,7 @@
       position: absolute;
       bottom: -46px;
       transition: all 0.6s ease-out;
-      background: linear-gradient(rgba(0, 0, 0, 0), rgb(0 0 0 / 69%), #000000);
+      background: linear-gradient(rgb(0 0 0 / 4%), rgb(0 0 0), #000000);
       @media screen and (max-width: 991px) {
         width: 100%;
         padding: 0px 25px 30px 24px;
@@ -97,8 +97,8 @@
       }
 
       h5 {
-        font-size: 22px;
-        line-height: 30px;
+        font-size: 18px;
+        line-height: 22px;
         font-weight: 500;
         padding-bottom: 12px;
         color:$secondary-color;
@@ -106,9 +106,9 @@
       }
 
       .card-text {
-        font-size: 16px;
-        line-height: 24px;
-        font-weight: 400;
+        font-size: 13px;
+        line-height: 18px;
+        font-weight: 300;
       }
 
       .card-top-title {
