--- a/assets/css/sass/developer.scss
+++ b/assets/css/sass/developer.scss
@@ -34,8 +34,10 @@
         }
     }
     .dev_left{
-        border-radius: 20px;
-        padding: 15px;
+        padding: 0;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
         @media screen and (max-width: 767px) {
             padding: 15px 0;
         }
@@ -56,7 +58,19 @@
             background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
             background-position: center center;
             animation: bg-spin 8s linear infinite;
-
+            background: radial-gradient(
+                113.04% 100% at 50% 0,
+                #181818 0%,
+                rgba(25, 25, 25, 1) 0.01%,
+                hsla(0, 0%, 3%, 0.81) 100%
+              );
+              border-radius: 20px;
+              box-shadow: 
+                inset 1.2px 0 #ffffff0a, 
+                inset -1.2px 0 #ffffff0a, 
+                inset 0 1.2px #ffffff1a, 
+                inset 0 0.6px #ffffff1a;    
+        
         &:hover {
             // --border-angle: 0turn;
             // --main-bg: conic-gradient(
@@ -78,17 +92,18 @@
         .dev_card_logo {
             display: inline-flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: flex-start;
             width: 100%;
         }
         span{
-            width: 60px;
-            height: 60px;
+            width: 40px;
+            height: 40px;
             object-fit: contain;
-            background-color: $primary-color;
-            padding: 10px;
+            // background-color: $primary-color;
+            padding: 5px;
             border-radius: 50%;
             margin-bottom:10px;
+            margin-right: 10px;
             img{
                 width: 100%;
                 height: 100%;
@@ -96,14 +111,15 @@
         }
         h4{
             font-size: 20px;
-            font-weight: 500;
+            font-weight: 300;
             color: $primary-color;
-            padding-bottom:10px;
+            // padding-bottom:10px;
             color: #d7ba7d;
         }
         p{
             color: $white;
-            font-weight: 400;
+            font-size: 14px;
+            font-weight: 300;
             margin-bottom: 0px;
             transition: all 0.6s ease;
         }
@@ -137,11 +153,7 @@
             position: relative;
             overflow: hidden;
             --border-angle: 0turn;
-            --main-bg: conic-gradient(
-                from var(--border-angle),
-                #1A2C2A 0%,  
-                #1A2C2A 100%
-                );
+            --main-bg: conic-gradient(from var(--border-angle), #0c0d0d 0%, #0d0e0e 100%);
             border: solid 1px transparent;
             border-radius: 1em;
             --gradient-border: conic-gradient(from var(--border-angle), transparent 50%, #f7c35f33, #3EAB90 99%, transparent);
@@ -159,8 +171,12 @@
                
                 .CodeMirror-scroll{
                     background-color:#1A2D2C !important;
+                    background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
+                    
                     .CodeMirror-gutter{
                         background-color: #1A2D2C !important;
+                        background: radial-gradient(113.04% 100% at 50% 0, #181818 0%, rgb(25, 25, 25) 0.01%, hsla(0, 0%, 3%, 0.81) 100%);
+                        
                     }
                     .cm-keyword{
                         color:#569CD6 !important;
